test/semantic_errors/invalid_return5.mc
int main() {
    return foo(); /* Foo not declared */
}